--- a/index.html
+++ b/index.html
@@ -1516,7 +1516,7 @@
                 <div class="section">
                 <h2 class="section-title">C.V.</h2>
                 <div class="cv-download-container">
-                <a href="cv-en.pdf" download="BENSALEM_ADEM_EN.pdf" class="cv-download-btn">
+                <a href="BENSALEM_ADEM_EN.pdf" download="BENSALEM_ADEM_EN.pdf" class="cv-download-btn">
              <div class="cv-icon">
                 <img src="en.png" alt="PDF Icon">
                 </div>
