--- a/index.html
+++ b/index.html
@@ -1526,7 +1526,7 @@
              </div>
               </a>
         
-             <a href="cv-fr.pdf" download="Adem_BENSALEM_CV_FR.pdf" class="cv-download-btn">
+             <a href="BENSALEM_ADEM_FR.pdf" download="BENSALEM_ADEM_FR.pdf" class="cv-download-btn">
               <div class="cv-icon">
                 <img src="fr.png" alt="PDF Icon">
              </div>
