--- a/index.html
+++ b/index.html
@@ -1509,7 +1509,12 @@
                         <div class="experience-item">TEST.INI - TO DO LIST</div>
                         <div class="experience-item">HACKTIC - ETIC HACKATHON</div>
                         <div class="experience-item">SingIt - CACE EVENT</div>
-                        <div class="experience-item">ESI+ - TEO PROJECT</div>
+                        <div class="experience-item">
+  <a href="https://www.figma.com/design/id22KhzipSgQPD0YtZrXVG/TEO?node-id=0-1&t=RWqIg9qAaRw1j69M-1" target="_blank" style="color: inherit; text-decoration: none;">
+    ESI+ - TEO PROJECT
+  </a>
+</div>
+
                     </div>
                     
                     <div class="experience-category">
