--- a/index.html
+++ b/index.html
@@ -1513,11 +1513,11 @@
   </a>
                                     </div>
                         
-                        <div class="experience-item"></div>
+                        <div class="experience-item">
     <a href="https://www.figma.com/design/2BSTSy6nfBwI8tEBKF1BAe/TEST.INI?node-id=3-12&t=V9jj3wudXM1BFgM4-1" target="_blank" style="color: inherit; text-decoration: none;">
    TEST.INI - MOOD TRACKER
   </a>
-
+</div>
                                 
                         <div class="experience-item">
 
