--- a/index.html
+++ b/index.html
@@ -1504,6 +1504,18 @@
                 <div class="experience-list">
                     <div class="experience-category">
                         <div class="category-icon"><img src="figma.png" alt="UI/UX Designer" height="40px"></div>
+
+<div class="experience-item">
+  <strong>Vetro</strong> – Watch Brand Project
+</div>
+<div class="experience-subtitle">
+  <a href="https://vetro-iota.vercel.app" target="_blank" class="esi-link" style="margin-right: 15px;">Website</a>
+  <a href="https://www.figma.com/design/KtX4JP2m9nwtQ2pJwLNppc/Untitled?node-id=0-1" target="_blank" class="esi-link">Figma</a>
+</div>
+
+
+
+                                
                                 
                         <div class="experience-item">
 
